# ShellMorph-Pro

./: LICENSE
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: CMakeLists.txt  cross_compile.sh
cmake/src/api/: CMakeLists.txt
cmake/src/cli/: CMakeLists.txt
cmake/src/core/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
docs/: API.md  LICENSE  README.md  getting_started.md  security_guidelines.md
docs/tutorials/: advanced_usage.md
src/api/: server.ts
src/cli/: main.cpp
src/core/: lib.rs
src/core/include/: core_wrapper.hpp
tests/: api_tests.spec.ts  cli_tests.cpp  core_tests.rs  integration.rs  stress_tests.rs
tools/: benchmark_runner.rs  file_formatter.cpp  license_checker.py  memory_analyzer.ts  performance_monitor.rs  shellcode_validator.rs  stress_tester.py
